# genetirc_algorithm_dashboard

./: .gitignore  DATA_STORAGE.md  MULTISEED_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  test_multiseed.py
configs/: fdtd.yaml  ga.yaml  paths.example.yaml
src/gadash/: __init__.py  cma_opt.py  commit_protocol.py  config.py  dashboard_app.py  fdtd_runner.py  fdtd_scripts.py  fdtd_verify.py  ga_opt.py  gds_export.py  generator.py  losses.py  lumapi_bridge.py  ops.py  optimization_logger.py  progress_logger.py  run_dashboard.py  run_ga.py  spectral.py  surrogate_interface.py
src/gadash/dashboard_static/: index.html
src/scripts/: __init__.py  run_dashboard.py  run_ga.py
